SERVER-86583 Ensure non-transactional snapshot reads on unsharded collections operate with a correct sharding catalog (#18943)

GitOrigin-RevId: 60ef48dc39200961af436609ab9110389d545a07